--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "bootstrap": "^5.3.2",
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.9.2",
         "react-dom": "^18.2.0",
         "react-redux": "^9.0.4",
         "react-scripts": "5.0.1",
