--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "my-portfolio",
+    "homepage": "https://ratnesh-mether.github.io/my-portfolio",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -10,6 +11,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.3.2",
+        "gh-pages": "^6.1.1",
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
         "react-bootstrap": "^2.9.2",
@@ -23,7 +25,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
